# rmod

./: .gitignore  .taskfile  Cargo.toml  LICENSE  README.md  clippy.json  clippy_output.txt  cspell.json  cspell.txt  devbox.json  patch_nit.sh  rustfmt.toml
.cargo/: .global-cache
files/: set-env.sh
res/compose/: .env  .taskfile  compose.yml
res/compose/vol/: postmaster.pid
res/compose/vol/base/16384/: 1247  1247_vm  1255  2619  pg_internal.init
res/compose/vol/base/16385/: pg_internal.init
res/compose/vol/base/4/: 1255  2619
res/compose/vol/base/5/: pg_internal.init
res/compose/vol/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
rmod-macros/: .gitignore  Cargo.toml
rmod-macros/src/: lib.rs
src/: config.rs  db.rs  fct.rs  fuse.rs  lib.rs  mod_util.rs  store.rs  test_lib.rs  time.rs  types.rs  util.rs
src/cache/: cache.rs  exp_cache.rs  mod.rs  simple_cache.rs  ttl_cache.rs
src/cache/test/: cache.rs
src/config/: app_config.rs  config.rs  dist_lock.rs  mod.rs  model.rs
src/conv/: conv.rs
src/db/: args.rs  db.rs  db_external.rs  exec.rs  fetch.rs  function.rs  mod.rs  repo.rs  tx.rs
src/db/test/: args.rs  tx.rs
src/fct/: fct.rs  mod.rs
src/fct/test/: fct.rs
src/fuse/: fuse.rs  fuse_grpc.rs  mod.rs  r_context_client_ip.rs
src/future/: future.rs  future_macro.rs  mod.rs
src/future/test/: future.rs
src/http/: http.rs  mod.rs
src/http/test/: http.rs
src/job/: job.rs  mod.rs
src/job/test/: job.rs
src/lock/: dist.rs  lock_impl.rs  mod.rs  model.rs  pg_lock.rs  redis_lock.rs
src/lock/test/: dist.rs
src/store/: db_store.rs  ice.rs  mod.rs  store.rs  var_store.rs
src/time/: mod.rs  test.rs  time.rs
src/time/test/: time.rs
src/type/: arcx.rs
src/type/test/: arcx.rs
src/types/: mod.rs
src/types/test/: arcx.rs
src/uid/: mod.rs  uid.rs
src/uid/test/: uid.rs
src/util/: conv.rs  crypto.rs  defer.rs  env.rs  ext.rs  future.rs  grpc_client.rs  http.rs  job.rs  jwt.rs  lifecycle.rs  support.rs  time.rs  uid.rs
src/util/conv/: conv.rs  test_conv.rs
src/util/env/: env.rs  test_env.rs
src/util/test/: conv.rs  crypto.rs  defer.rs  env.rs  future.rs  http.rs  job.rs  jwt.rs  support.rs  time.rs  uid.rs
