[package]
name = "rmod"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
once_cell = "1.21.3"
axum = "0.8.8"
tower = "0.5.3"
tower-http = "0.6.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
futures-util = "0.3.31"
rmod-macros = { path = "./rmod-macros" }
aes = "0.8.4"
cbc = "0.1.2"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
hmac = "0.12.1"
rand = "0.10.0"
base64 = "0.22.1"
argon2 = "0.5.3"
aes-gcm = "0.10.3"

