[package]
name = "rmod"
version = "1.0.19"
edition = "2024"

[dependencies]
chrono = "0.4.43"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "rust_decimal", "chrono"] }
tokio = { version = "1.49.0", features = ["full", "macros", "rt-multi-thread"] }
axum = "0.8.8"
tower = "0.5.3"
tower-http = "0.6.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_path_to_error = "0.1.20"
futures-util = "0.3.31"
rmod-macros = { path = "./rmod-macros" }
aes = "0.8.4"
cbc = "0.1.2"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
hmac = "0.12.1"
rand = "0.10.0"
base64 = "0.22.1"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rust_decimal = { version = "1.40.0", features = ["db-postgres", "serde-with-str"] }
rust_decimal_macros = "1.40.0"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
tonic = { version = "0.12.3", features = ["transport", "tls", "tls-roots", "tls-native-roots"] }
prost = "0.13.3"
tonic-build = "0.12.3"
http = "1.2.0"
bytes = "1.10.0"
tonic-health = "0.12.3"
chrono-tz = "0.10.0"
percent-encoding = "2.3.1"
redis = { version = "1.0.5", features = ["tokio-comp"] }
siphasher = "1.0.2"
moka = { version = "0.12.15", features = ["future", "sync"] }
